Add privacy policy and terms of service pages with route configurations

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,5 @@
     },
     "types": ["vite/client"]
   },
-  "include": ["**/*.ts", "**/*.tsx"]
+  "include": ["**/*.ts", "**/*.tsx", "vite.config.js"]
 }
