--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@tanstack/react-router-with-query": "^1.109.2",
     "@tanstack/react-start": "^1.114.29",
     "@tanstack/router-devtools": "^1.109.2",
+    "@tanstack/router-plugin": "^1.115.0",
     "@tanstack/start": "^1.111.2",
     "@trpc/client": "npm:@trpc/client",
     "@trpc/react-query": "^11.0.1",
