Add token swap functionality using Sailfish DEX with UI component and tools

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@rainbow-me/rainbowkit": "^2.2.4",
+    "@sailfishdex/v3-sdk": "^1.1.10",
     "@tanstack/react-query": "^5.69.0",
     "@tanstack/react-query-devtools": "^5.64.2",
     "@tanstack/react-router": "^1.109.2",
@@ -60,6 +61,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.41.0",
+    "ethers": "^6.13.5",
     "framer-motion": "^12.6.2",
     "lucide-react": "^0.484.0",
     "mastra": "^0.4.4",
