Add quiz detail page and refactor quiz generation with user tracking

--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@trpc/react-query": "^11.0.1",
     "@trpc/server": "npm:@trpc/server",
     "@trpc/tanstack-react-query": "npm:@trpc/tanstack-react-query",
+    "@types/uuid": "^10.0.0",
     "ai": "^4.3.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -76,6 +77,7 @@
     "superjson": "^1.12.4",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0",
     "viem": "2.x",
     "vinxi": "0.5.3",
     "wagmi": "^2.14.15",
