--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@coinbase/agentkit-vercel-ai-sdk": "^0.1.0",
     "@mastra/core": "^0.7.0",
     "@privy-io/public-api": "^2.20.5",
+    "@radix-ui/react-accordion": "^1.2.4",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.6",
