--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "ai": "^4.3.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.41.0",
     "ethers": "^6.13.5",
