--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@mastra/core": "^0.7.0",
     "@privy-io/public-api": "^2.20.5",
     "@radix-ui/react-accordion": "^1.2.4",
+    "@radix-ui/react-alert-dialog": "^1.1.7",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.6",
