--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@ai-sdk/google": "^1.2.10",
     "@ai-sdk/groq": "^1.2.1",
     "@ai-sdk/react": "^1.2.6",
     "@assistant-ui/react": "^0.8.6",
