--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "framer-motion": "^12.6.2",
     "lucide-react": "^0.484.0",
     "mastra": "^0.4.4",
+    "motion": "^12.6.3",
     "next-themes": "^0.4.6",
     "pg": "^8.14.1",
     "react": "^19.0.0",
