--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@tanstack/router-devtools": "^1.109.2",
     "@tanstack/router-plugin": "^1.115.0",
     "@tanstack/start": "^1.111.2",
+    "@trigger.dev/sdk": "^3.3.17",
     "@trpc/client": "npm:@trpc/client",
     "@trpc/react-query": "^11.0.1",
     "@trpc/server": "npm:@trpc/server",
@@ -92,6 +93,7 @@
   "devDependencies": {
     "@eslint/js": "^8.57.0",
     "@playwright/test": "^1.50.1",
+    "@trigger.dev/build": "^3.3.17",
     "@types/node": "^22.13.5",
     "@types/pg": "^8.11.11",
     "@types/react": "^19.0.0",
@@ -110,5 +112,6 @@
     "typescript-eslint": "^8.24.1",
     "vite": "^6.1.1",
     "vite-tsconfig-paths": "^4.3.2"
-  }
+  },
+  "packageManager": "pnpm@10.8.1+sha512.c50088ba998c67b8ca8c99df8a5e02fd2ae2e2b29aaf238feaa9e124248d3f48f9fb6db2424949ff901cffbb5e0f0cc1ad6aedb602cd29450751d11c35023677"
 }
