Add pnpm CLI installation step to GitHub Actions workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,8 @@ jobs:
         with:
           node-version: '20'
           cache: 'pnpm'
+      - name: Install pnpm CLI
+        run: npm install -g pnpm@8
       - uses: pnpm/action-setup@v2
         with:
           version: '8'
