--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,20 +11,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Setup Node & pnpm
+      - name: Setup Node
         uses: actions/setup-node@v3
         with:
           node-version: '20'
-          cache: 'pnpm'
-      - name: Install pnpm CLI
-        run: npm install -g pnpm@8
-      - uses: pnpm/action-setup@v2
-        with:
-          version: '8'
       - name: Deploy Trigger.dev tasks
         env:
           TRIGGER_SECRET_KEY: ${{ secrets.TRIGGER_SECRET_KEY }}
-        run: pnpm dlx trigger.dev@latest deploy
+        run: npx trigger.dev@latest deploy
 
   deploy-telegram:
     name: Deploy Telegram Bot
@@ -32,11 +26,10 @@ jobs:
     needs: deploy-trigger
     steps:
       - uses: actions/checkout@v3
-      - name: Install Bun
-        run: |
-          curl -fsSL https://bun.sh/install | bash
-          echo "BUN_INSTALL=$HOME/.bun" >> $GITHUB_ENV
-          echo "PATH=$HOME/.bun/bin:$PATH" >> $GITHUB_ENV
+      - name: Setup Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
       - name: Install Wrangler
         run: npm install -g wrangler
       - name: Publish TG_BOT_TOKEN secret
@@ -48,4 +41,4 @@ jobs:
         working-directory: telegram
         env:
           CF_API_TOKEN: ${{ secrets.CF_API_TOKEN }}
-        run: bunx wrangler deploy
+        run: wrangler deploy
