Install pnpm and use it to deploy trigger.dev tasks instead of npx

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,10 +15,12 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '20'
+      - name: Install pnpm (workaround for trigger.dev CLI)
+        run: npm install -g pnpm@8
       - name: Deploy Trigger.dev tasks
         env:
           TRIGGER_SECRET_KEY: ${{ secrets.TRIGGER_SECRET_KEY }}
-        run: npx trigger.dev@latest deploy
+        run: pnpm dlx trigger.dev@latest deploy
 
   deploy-telegram:
     name: Deploy Telegram Bot
