--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "@tanstack/router-devtools": "^1.109.2",
     "@tanstack/router-plugin": "^1.115.0",
     "@tanstack/start": "^1.111.2",
-    "@trigger.dev/sdk": "^3.3.17",
+    "@trigger.dev/sdk": "3.3.17",
     "@trpc/client": "npm:@trpc/client",
     "@trpc/react-query": "^11.0.1",
     "@trpc/server": "npm:@trpc/server",
@@ -93,7 +93,7 @@
   "devDependencies": {
     "@eslint/js": "^8.57.0",
     "@playwright/test": "^1.50.1",
-    "@trigger.dev/build": "^3.3.17",
+    "@trigger.dev/build": "3.3.17",
     "@types/node": "^22.13.5",
     "@types/pg": "^8.11.11",
     "@types/react": "^19.0.0",
