--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "postcss": "^8.4.39",
     "tailwind-scrollbar": "^3.0.0",
     "tailwindcss": "^3.4.6",
+    "trigger.dev": "^3.3.17",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.24.1",
