--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,9 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '20'
+      - name: Install Telegram dependencies
+        working-directory: telegram
+        run: npm install
       - name: Install Wrangler
         run: npm install -g wrangler
       - name: Publish TG_BOT_TOKEN secret
