--- a/telegram/package.json
+++ b/telegram/package.json
@@ -25,6 +25,8 @@
     "csv-parse": "^5.6.0",
     "csv-stringify": "^6.5.2",
     "grammy": "^1.35.1",
+    "@trpc/client": "^11.1.0",
+    "superjson": "^1.12.4",
     "json2csv": "^6.0.0-alpha.2"
   }
 }
