Add dev scripts and update API base URL for local development

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vinxi dev",
+    "dev:ngrok": "ngrok http --domain=basically-enough-clam.ngrok-free.app 3000",
+    "dev:telegram": "cd telegram && bun dev",
     "build": "vinxi build",
     "start": "vinxi start",
     "test-dev": "playwright test --project=dev",
