Add dev scripts and concurrently package for running multiple services

--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vinxi dev",
+    "dev:trigger": "pnpm dlx trigger.dev@3.3.17 dev",
     "dev:ngrok": "ngrok http --domain=basically-enough-clam.ngrok-free.app 3000",
     "dev:telegram": "cd telegram && bun dev",
+    "dev:all": "concurrently \"pnpm run dev\" \"pnpm run dev:trigger\" \"pnpm run dev:ngrok\" \"pnpm run dev:telegram\"",
     "build": "vinxi build",
     "start": "vinxi start",
     "test-dev": "playwright test --project=dev",
@@ -67,6 +69,7 @@
     "ai": "^4.3.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "concurrently": "^7.5.0",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.41.0",
@@ -109,7 +112,7 @@
     "postcss": "^8.4.39",
     "tailwind-scrollbar": "^3.0.0",
     "tailwindcss": "^3.4.6",
-    "trigger.dev": "^3.3.17",
+    "trigger.dev": "3.3.17",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.24.1",
