--- a/package.json
+++ b/package.json
@@ -56,14 +56,15 @@
     "@tanstack/react-query-devtools": "^5.64.2",
     "@tanstack/react-router": "^1.109.2",
     "@tanstack/react-router-with-query": "^1.109.2",
-    "@tanstack/react-start": "^1.116.1",
+    "@tanstack/react-start": "^1.114.29",
     "@tanstack/router-devtools": "^1.109.2",
     "@tanstack/router-plugin": "^1.115.0",
+    "@tanstack/start": "^1.111.2",
     "@trigger.dev/sdk": "3.3.17",
-    "@trpc/client": "^11.1.0",
-    "@trpc/react-query": "^11.1.0",
-    "@trpc/server": "^11.1.0",
-    "@trpc/tanstack-react-query": "^11.1.0",
+    "@trpc/client": "npm:@trpc/client",
+    "@trpc/react-query": "^11.0.1",
+    "@trpc/server": "npm:@trpc/server",
+    "@trpc/tanstack-react-query": "npm:@trpc/tanstack-react-query",
     "@types/uuid": "^10.0.0",
     "ai": "^4.3.4",
     "class-variance-authority": "^0.7.1",
